--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@phosphor-icons/vue": "^2.2.1",
     "@supabase/supabase-js": "^2.45.1",
     "confetti-rain": "^2.0.0",
     "pinia": "^2.1.7",
