--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
+    "@pinia/testing": "^0.1.5",
     "@rushstack/eslint-patch": "^1.8.0",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitest/coverage-v8": "^2.1.1",
